Autogenerate reflection config, support latest minecraft, and don't hardcode download url for minecraft server jar